# rosa

./: .buildinfo  .gitignore  README.md  example_tomasys_model.tql  kb_interface.py  query_graph.tql  rosa.rosinstall  searchindex.js
.doctrees/: environment.pickle  rosa_bringup.doctree  rosa_execute.doctree  rosa_kb.doctree  rosa_plan.doctree
.doctrees/_autosummary/: rosa_bringup.lifecycle_manager.LifeCycleManager.doctree  rosa_bringup.lifecycle_manager.doctree  rosa_bringup.lifecycle_manager.main.doctree  rosa_execute.configuration_executor.ConfigurationExecutor.doctree  rosa_execute.configuration_executor.check_lc_active.doctree  rosa_execute.configuration_executor.doctree  rosa_execute.configuration_executor.get_parameter_value.doctree  rosa_kb.rosa_kb_typedb.RosaKB.doctree  rosa_kb.rosa_kb_typedb.check_lc_active.doctree  rosa_kb.rosa_kb_typedb.doctree  rosa_kb.rosa_kb_typedb.publish_event.doctree  rosa_kb.typedb_model_interface.ComponentConfigurationDict.doctree  rosa_kb.typedb_model_interface.ComponentDict.doctree  rosa_kb.typedb_model_interface.ComponentParemeterDict.doctree  rosa_kb.typedb_model_interface.ComponentProcessDict.doctree  rosa_kb.typedb_model_interface.MatchResultDict.doctree  rosa_kb.typedb_model_interface.ModelInterface.doctree  rosa_kb.typedb_model_interface.ReconfigPlanDict.doctree  rosa_kb.typedb_model_interface.convert_component_parameter_value_to_py_type.doctree  rosa_kb.typedb_model_interface.doctree  rosa_plan.configuration_planner.ConfigurationPlanner.doctree  rosa_plan.configuration_planner.check_lc_active.doctree  rosa_plan.configuration_planner.doctree
.github/workflows/: doc.yml  test.yml
docs/source/: api.rst  conf.py  index.rst  (+5 more)
metacontrol_bringup/: package.xml  setup.cfg  setup.py
metacontrol_execute/: package.xml  setup.cfg  setup.py
metacontrol_kb/: package.xml  setup.cfg  setup.py
metacontrol_kb/config/: ros_schema.tql  schema.tql  suave.tql
metacontrol_kb/launch/: metacontrol_kb.launch.py
metacontrol_kb/metacontrol_kb/: metacontrol_kb.py  metacontrol_kb_node.py  metacontrol_kb_typedb.py  typedb_model_interface.py
metacontrol_kb/test/: test_metacontrol_kb.py  test_model_interface.py  test_schema_rules.py
metacontrol_kb/test/test_data/: ros_test_data.tql  test_data.tql
metacontrol_kb_msgs/: CMakeLists.txt  package.xml
metacontrol_kb_msgs/msg/: Attribute.msg  Component.msg  ComponentConfig.msg  ComponentParameter.msg  Entity.msg  ReconfigurationPlan.msg  Related.msg  Relationship.msg  SelectedComponentConfig.msg  SelectedFunctionDesign.msg  Task.msg
metacontrol_kb_msgs/srv/: AdaptableComponents.srv  AdaptableFunctions.srv  ComponentQuery.srv  GetComponentConfigPerformance.srv  GetComponentParameters.srv  GetFDPerformance.srv  GetReconfigurationPlan.srv  KBQuery.srv  ReconfigurationPlanQuery.srv  SelectableComponentConfigs.srv  SelectableFDs.srv  SelectedConfig.srv  TaskRequest.srv
metacontrol_plan/: CMakeLists.txt  package.xml  setup.cfg  setup.py
metacontrol_plan/include/metacontrol_plan/: is_task_feasible.hpp  metacontroled_action.hpp
metacontrol_plan/launch/: metacontrol_plan.launch.py
metacontrol_plan/metacontrol_plan/: configuration_planner.py  configuration_planner_node.py
metacontrol_plan/src/metacontrol_plan/: is_task_feasible.cpp  metacontroled_action.cpp
metacontrol_plan/test/: test_configuration_planner.py  test_configuration_planner_integration.py
proposal/: example_model.tql  schema.tql
rosa_bringup/: package.xml  setup.cfg  setup.py
rosa_execute/: package.xml  setup.cfg  setup.py
rosa_kb/: package.xml  setup.cfg  setup.py
rosa_msgs/: CMakeLists.txt  package.xml
rosa_msgs/msg/: Action.msg  Component.msg  ComponentConfiguration.msg  ComponentProcess.msg  FunctionDesign.msg  FunctionalRequirement.msg  ReconfigurationPlan.msg  Task.msg
rosa_msgs/srv/: ActionQuery.srv  ActionQueryArray.srv  AdaptableComponents.srv  AdaptableFunctions.srv  ComponentProcessQuery.srv  ComponentProcessQueryArray.srv  ComponentQuery.srv  FunctionDesignQuery.srv  FunctionQuery.srv  FunctionalRequirementQuery.srv  GetComponentConfigPriority.srv  GetComponentConfigurationPriority.srv  GetComponentParameters.srv  GetFDPerformance.srv  GetReconfigurationPlan.srv  ReconfigurationPlanQuery.srv  SelectableComponentConfigs.srv  SelectableComponentConfigurations.srv  SelectableFDs.srv  SelectedConfig.srv  SelectedConfigurations.srv  SetReconfigurationPlan.srv  StructuralAdaptation.srv  TasksMatched.srv
rosa_plan/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rosa_plan/include/rosa_plan/: is_action_feasible.hpp  is_task_feasible.hpp  rosa_action.hpp
rosa_plan/launch/: rosa_plan.launch.py
rosa_plan/rosa_plan/: configuration_planner.py  configuration_planner_node.py
rosa_plan/src/rosa_plan/: is_action_feasible.cpp  is_task_feasible.cpp  rosa_action.cpp
rosa_plan/test/: test_configuration_planner.py  test_configuration_planner_integration.py
rosa_task_plan_plansys/: CMakeLists.txt  package.xml
rosa_task_plan_plansys/include/rosa_task_plan_plansys/: rosa_action_plansys.hpp  rosa_plansys_controller.hpp
rosa_task_plan_plansys/src/: rosa_action_plansys.cpp  rosa_plansys_controller.cpp
rosa_task_planner_interfaces/rosa_task_plan_bt/: CMakeLists.txt  package.xml
rosa_task_planner_interfaces/rosa_task_plan_bt/include/rosa_task_plan_bt/: is_action_feasible.hpp  rosa_action.hpp  visibility_control.h
rosa_task_planner_interfaces/rosa_task_plan_bt/src/: is_action_feasible.cpp  rosa_action.cpp
rosa_task_planner_interfaces/rosa_task_plan_plansys/: CMakeLists.txt  package.xml
rosa_task_planner_interfaces/rosa_task_plan_plansys/include/rosa_task_plan_plansys/: rosa_action.hpp  rosa_plansys_controller.hpp  visibility_control.h
rosa_task_planner_interfaces/rosa_task_plan_plansys/src/: rosa_action.cpp  rosa_plansys_controller.cpp  rosa_plansys_controller_node.cpp
src/: analyzer.py  executor.py  kb_interface.py  metacontrol.py  metacontrol_uio.py  model_interface.py  plan.py  planner.py  test_model_interface.py  test_schema_rules.py  test_typedb_interface.py  tests.py  typedb_interface.py
(+76 files in other folders)
