<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosa_plan</name>
  <version>0.0.0</version>
  <description>Taks and configuration planners</description>
  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>ros_typedb</depend>
  <depend>ros_typedb_msgs</depend>
  <depend>rosa_kb</depend>
  <depend>rosa_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>behaviortree_cpp</depend>

  <test_depend>ros_pytest</test_depend>

  <test_depend>ament_copyright</test_depend>
  <!-- <test_depend>ament_flake8</test_depend> -->
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
