<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosa_task_plan_plansys</name>
  <version>0.0.0</version>
  <description>ROSA nodes for plansys</description>
  <maintainer email="g.rezendesilva@tudelft.nl">Gustavo Rezende</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>rosa_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
