<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosa_task_plan_bt</name>
  <version>0.0.0</version>
  <description>ROSA interfaces for BehaviorTree.CPP</description>
  <maintainer email="g.rezendesilva@tudelft.nl">gus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rosa_kb</depend>
  <depend>rosa_msgs</depend>
  <depend>behaviortree_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
